<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.10</version>
        <relativePath/>
    </parent>

    <groupId>com.zhongbo.mindos</groupId>
    <artifactId>mindos</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>mindos</name>
    <description>MindOS personal AI assistant multi-module backend</description>

    <modules>
        <module>assistant-common</module>
        <module>assistant-sdk</module>
        <module>assistant-memory</module>
        <module>assistant-skill</module>
        <module>assistant-llm</module>
        <module>assistant-dispatcher</module>
        <module>assistant-api</module>
        <module>mindos-cli</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>
        <spring-framework.version>6.1.20</spring-framework.version>
        <jackson-bom.version>2.18.6</jackson-bom.version>
    </properties>
</project>
